--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arturo Candela Moltó - Currículum Vitae</title>
+    <title>Alex Monllor Jerez - Currículum Vitae</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
